<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather Forecast</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="channel_name">Weather Forecast</string>
    <string name="channel_description">Home</string>

    <!-- Preference Titles -->
    <string name="location_header">Location</string>
    <string name="units_header">Unit</string>
    <string name="language_header">Language</string>

    <!-- Location Preferences -->
    <string name="location_title">Default location</string>

    <!-- Unit Preferences -->
    <string name="units_title">Default unit</string>

    <!-- Unit Preferences -->
    <string name="language_title">Default language</string>
    <string name="metersec">meter/sec</string>
    <string name="mileshour">miles/hour</string>
    <string name="fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="kelvin">°K</string>
    <string name="hPa">hPa</string>
    <string name="mm">mm</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>

    <string name="noBtn">No</string>
    <string name="yesBtn">Yes</string>
    <string name="alertEventHint">Alert Event</string>
    <string name="alertType">Alert Type</string>
    <string name="alertTimeLbl">Alert Time</string>
    <string name="addBtn">Add</string>
    <string name="updateBtn">Update</string>

    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="title_activity_add_favorite">Map</string>

    <!--Tap Bar Titles-->
    <string name="title_home">Home</string>
    <string name="title_alert">Alert</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>

    <!--alert days-->
    <string name="EveryDay">Every Day</string>
    <string name="EveryWeekend">Every Weekend</string>
    <string name="NoRepeat">"No Repeat"</string>

    <!--dialog-->
    <string name="Permission">Permission</string>
    <string name="PermissionMsg">You must let the App to display content overlay the other Apps to can use all its function</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rePermissionMsg">Please, give us permission to access your Location</string>
    <string name="Warning">Warning</string>
    <string name="WarningMsg">Are you sure you want delete this?</string>
    <string name="Open">Open</string>
    <string name="Stop">Stop</string>

    <string name="hourlyLbl">Hourly Forecast</string>
    <string name="dailyLbl">Daily Forecast</string>
    <string name="dayLbl">Day</string>
    <string name="nightLbl">Night</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>

    <!--details view-->
    <string name="feels_like">Perception</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="dew_point">Dew Point</string>
    <string name="clouds">Clouds</string>
    <string name="uvi">UVI</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
</resources>