<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.alert.AddAlertActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:foreground="#7A183C45"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_recycler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/monCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/monday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sunCheckBox"
            app:layout_constraintTop_toTopOf="@+id/sunCheckBox" />

        <Spinner
            android:id="@+id/alertTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_recycler"
            android:entries="@array/alertType"
            android:theme="@style/spinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/friCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/friday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tueCheckBox"
            app:layout_constraintTop_toTopOf="@+id/tueCheckBox" />

        <CheckBox
            android:id="@+id/satCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/saturday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeLbl" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/addBtn"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            app:backgroundTint="#009688"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friCheckBox" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/alertTimeLbl"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/alertTypeSpinner" />

        <TextView
            android:id="@+id/timeLbl"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_recycler"
            android:text="00:00"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/tueCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tuesday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/wedCheckBox"
            app:layout_constraintTop_toTopOf="@+id/wedCheckBox" />

        <CheckBox
            android:id="@+id/thuCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/thursday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/monCheckBox"
            app:layout_constraintTop_toTopOf="@+id/monCheckBox" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/alertEventHint"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/sunCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sunday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/satCheckBox"
            app:layout_constraintTop_toTopOf="@+id/satCheckBox" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/alertType"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/alertEventSpinner" />

        <CheckBox
            android:id="@+id/wedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/wednesday"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/satCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/satCheckBox" />

        <Spinner
            android:id="@+id/alertEventSpinner"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_recycler"
            android:entries="@array/alertEvent"
            android:theme="@style/spinnerTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>